create swagger documentation for get list book and get token oauth
