# dto/request/user.go
@@ -11,4 +11,9 @@ type (
 		Email    string `json:"email" binding:"required,email"`
 		Password string `json:"password" binding:"required"`
 	}
+
+	OAuthRequest struct {
+		Username string `json:"username" binding:"required,email"`
+		Password string `json:"password" binding:"required"`
+	}
 )
