# dto/response/response.go
@@ -29,4 +29,10 @@ type (
 		Email string    `json:"email"`
 		Token string    `json:"token"`
 	}
+
+	OAuthResponse struct {
+		AccessToken string `json:"access_token"`
+		TokenType   string `json:"token_type"`
+		ExpiresIn   int    `json:"expires_in"`
+	}
 )
